新增大量功能